# video-apia79f5d7d-7873-4606-a4fd-6271bdc8a574

./: .env.example  README.md  pyproject.toml  schema.prisma
project/: get_user_profile_service.py  login_user_service.py  register_user_service.py  server.py  stream_video_service.py  update_user_profile_service.py  upload_video_service.py
